test/JDBC/expected/sys-fn-varbintohexsubstring-before-16_10-or-17_6-vu-verify.out
-- dependent objects
SELECT * FROM fn_varbintohexsubstring_vu_prepare_view
GO
~~START~~
nvarchar
<NULL>
~~END~~


EXEC fn_varbintohexsubstring_vu_prepare_proc
GO
~~START~~
nvarchar
0x1234
~~END~~


SELECT * FROM fn_varbintohexsubstring_vu_prepare_func()
GO
~~START~~
nvarchar
0x1234
~~END~~


-- NULL expression results in NULL output
SELECT sys.fn_varbintohexsubstring(0,0x,1,3);
GO
~~START~~
nvarchar
<NULL>
~~END~~


SELECT sys.fn_varbintohexsubstring(0,CAST(NULL AS VARBINARY),1,4);
GO
~~START~~
nvarchar
<NULL>
~~END~~


-- if substr_length is NULL, negative, zero or greater than length of expression, set substr_length as length of expression
SELECT sys.fn_varbintohexsubstring(1,0x123486534659789876435656,1,NULL);
GO
~~START~~
nvarchar
0x123486534659789876435656
~~END~~


SELECT sys.fn_varbintohexsubstring(1, 0x123486534659789876435656, 1, -5);
GO
~~START~~
nvarchar
0x123486534659789876435656
~~END~~


SELECT sys.fn_varbintohexsubstring(1,0x123486534659789876435656,1,0);
GO
~~START~~
nvarchar
0x123486534659789876435656
~~END~~


SELECT sys.fn_varbintohexsubstring(1,0x123486534659789876435656,1,100);
GO
~~START~~
nvarchar
0x123486534659789876435656
~~END~~


-- if substr_length is out of bounds of the expression, then len is set to the length of expression - start_offset
SELECT sys.fn_varbintohexsubstring(1, 0x123486534659789876435656, 3, 20);
GO
~~START~~
nvarchar
0x86534659789876435656
~~END~~


-- if set_prefix is NULL or 0, no prefix is added
SELECT sys.fn_varbintohexsubstring(NULL,0x123486534659789876435656,1,4);
GO
~~START~~
nvarchar
12348653
~~END~~


SELECT sys.fn_varbintohexsubstring(0,0x123486534659789876435656,1,4);
GO
~~START~~
nvarchar
12348653
~~END~~


-- if set_prefix is 1 or any other integer except 0, prefix is added
SELECT sys.fn_varbintohexsubstring(1,0x123486534659789876435656,1,4);
GO
~~START~~
nvarchar
0x12348653
~~END~~


SELECT sys.fn_varbintohexsubstring(52,0x123486534659789876435656,1,4);
GO
~~START~~
nvarchar
0x12348653
~~END~~


SELECT sys.fn_varbintohexsubstring(-81,0x123486534659789876435656,1,4);
GO
~~START~~
nvarchar
0x12348653
~~END~~


-- if start_offset is NULL or 0 or negative, return NULL
SELECT sys.fn_varbintohexsubstring(1,0x87243478679,NULL,4);
GO
~~START~~
nvarchar
<NULL>
~~END~~


SELECT sys.fn_varbintohexsubstring(1,0x87243478679,CAST(NULL AS INT),4);
GO
~~START~~
nvarchar
<NULL>
~~END~~


SELECT sys.fn_varbintohexsubstring(1,0x87243478679,0,4);
GO
~~START~~
nvarchar
<NULL>
~~END~~


SELECT sys.fn_varbintohexsubstring(1, 0x123456, -1, 2);
GO
~~START~~
nvarchar
<NULL>
~~END~~


-- if start_offset is out of bound, return NULL
SELECT sys.fn_varbintohexsubstring(1, 0x123456, 100, 2);
GO
~~START~~
nvarchar
<NULL>
~~END~~


-- NULL edge cases
SELECT sys.fn_varbintohexsubstring(NULL,NULL,NULL,NULL);
GO
~~START~~
nvarchar
<NULL>
~~END~~


SELECT sys.fn_varbintohexsubstring(NULL,0x8675235657899765,NULL,NULL);
GO
~~START~~
nvarchar
<NULL>
~~END~~


SELECT sys.fn_varbintohexsubstring(NULL,0x8675235657899765,2,NULL);
GO
~~START~~
nvarchar
75235657899765
~~END~~


--negative test as varbinary only consists of 0-9 and A-F
SELECT sys.fn_varbintohexsubstring(1,0x1452J5S4, 2, 4);  
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '.' at line 2 and character position 10)~~


-- negative test gives error as the expression datatype is not varbinary
SELECT sys.fn_varbintohexsubstring(1,'1A2B3C4D', 2, 4);  
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: cannot coerce string literal to varbinary datatype)~~


-- validate check constraint
INSERT INTO babel_5654_t1 VALUES (0,0x123486534659789876435656,1,4)
GO
~~ROW COUNT: 1~~

INSERT INTO babel_5654_t1 VALUES (1,0x123486534659789876435656,1,4)
GO
~~ROW COUNT: 1~~

INSERT INTO babel_5654_t1 VALUES (1,0x123486534659789876435656,3,4)
GO
~~ROW COUNT: 1~~


SELECT * FROM babel_5654_t1
GO
~~START~~
bit#!#varbinary#!#int#!#int
0#!#123486534659789876435656#!#1#!#4
0#!#123486534659789876435656#!#1#!#4
1#!#123486534659789876435656#!#1#!#4
1#!#123486534659789876435656#!#3#!#4
~~END~~


-- computed columns
INSERT INTO babel_5654_t2 VALUES (1,0x23486534659789876435656,3,4)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: relation "babel_5654_t2" does not exist)~~


SELECT * FROM babel_5654_t2 WHERE [varbintohexsubstring] = sys.fn_varbintohexsubstring(1,0x23486534659789876435656,3,4)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: relation "babel_5654_t2" does not exist)~~


-- computed columns with user defined datatypes
INSERT INTO babel_5654_t3 VALUES (1,0x23486534659789876435656,3,4)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: relation "babel_5654_t3" does not exist)~~


SELECT * FROM babel_5654_t3 WHERE [varbintohexsubstring] = sys.fn_varbintohexsubstring(1,0x23486534659789876435656,3,4)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: relation "babel_5654_t3" does not exist)~~

